--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
+*.pyc
+*.pyo
+*.pyd
+.venv/
+.conda/
+.ipynb_checkpoints/
+*.ipynb_convert/
 *$py.class
+
+# data & artifacts
+data/raw/
+data/external/
+data/processed/
+reports/
+!data/.keep
+!reports/.keep
 
 # C extensions
 *.so
@@ -169,3 +183,9 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# OS / editor
+.DS_Store
+Thumbs.db
+.vscode/
+!.vscode/settings.json
